--- a/person-service/pom.xml
+++ b/person-service/pom.xml
@@ -9,7 +9,7 @@
 		<version>2.3.4.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>spring.edu.ms..app</groupId>
+	<groupId>spring.edu.ms.app</groupId>
 	<artifactId>person-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>person-service</name>
