--- a/cloud-config-repository/person-service/person-service-prod.yml
+++ b/cloud-config-repository/person-service/person-service-prod.yml
@@ -5,7 +5,7 @@
 
 spring.datasource:
     driverClassName: org.h2.Driver
-    url: jdbc:h2:mem:bootexample;MODE=MySQL
+    url: jdbc:h2:mem:persondbprod;MODE=MySQL
 
 #todo: make sure to always enable security in production
 security:
