--- a/person-service/src/main/resources/application.yml
+++ b/person-service/src/main/resources/application.yml
@@ -2,45 +2,16 @@
 ### This fils is in Yaml format but you can also do this using the traditional
 ### Java properties file.
 
+spring:
+  profile:
+    active:
+      dev
 
-spring.datasource:
-    driverClassName: org.h2.Driver
-    url: jdbc:h2:mem:bootexample;MODE=MySQL
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/,http://localhost:8762/eureka/
 
-#todo: make sure to always enable security in production
-security:
-  basic:
-    enabled: false
-
-management:
-  security:
-    enabled: false
-  endpoint:
-    health:
-      show-details: "ALWAYS"
-  endpoints:
-    web:
-      exposure:
-        include: "*"
-
-
-#default project info followed by actual injected pom-specified values.
-project:
-  name: spring-boot-person-service
-  version: 0.1
-  description: spring-boot-person-service
-info:
-  build:
-    artifact: ${project.artifactId}
-    name: ${project.name}
-    description: ${project.description}
-    version: ${project.version}
-  app:
-    java:
-      source: 1.8
-
-user.service:
-  name: 'default profile:'
 ---
 spring:
   profiles: test
