Person service properties

--- a/person-service/src/main/resources/application.properties
+++ b/person-service/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 #for spring boot actuator
 server.servlet.context-path=/person-service
-
+server.port=8090
+spring.application.name=person-service
 #http://localhost:8080/person-service/actuator
-
+#http://localhost:8080/person-service/actuator/info
+#http://localhost:8080/person-service/actuator/health
 #http://localhost:8080/person-service/swagger-ui/
