--- a/vehicle-registration-app/src/main/resources/bootstrap.yml
+++ b/vehicle-registration-app/src/main/resources/bootstrap.yml
@@ -3,4 +3,7 @@ spring:
     name: vehicle-registartion-service
   cloud:
     config:
-      uri: http://localhost:9000/config-service 
+      uri: http://localhost:9000/config-service
+    loadbalancer:
+      ribbon:
+        enabled: false
