--- a/cloud-config-service/src/main/resources/application.yml
+++ b/cloud-config-service/src/main/resources/application.yml
@@ -7,5 +7,5 @@ spring:
         git:
           uri: https://github.com/Dipayan-Das1/cloud-config-repository
           searchPaths: '{application}'
-          username: Dipayan-Das1
-          password: Kolkata@20081987
+          username: GIT_USERNAME
+          password: GIT_PASSWORD
